--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 <script src="./vendor/shards.min.js"></script>
 <script src="./js/firebase/config.js"></script>
-<script src="/js/firebase/auth.js"></script>
-<script src="/js/firebase/signin.js"></script>
+<script src="./js/firebase/auth.js"></script>
+<script src="./js/firebase/signin.js"></script>
 
 
 </body>
