--- a/routes/users/MyAchievements.html
+++ b/routes/users/MyAchievements.html
@@ -277,7 +277,17 @@
 
 
 
-
+      <script>
+        function logout() {
+          auth.signOut()
+          .then(res => {
+              console.log("User logged out: ", res);
+              
+              // navigate to index page
+              window.location.href = "/";
+          })
+        }
+      </script>
 
 
 
@@ -321,7 +331,7 @@
         <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
         <div class="modal-footer">
           <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary logout-btn" href="#">Logout</a>
+          <a class="btn btn-primary" href="#" onclick="logout()">Logout</a>
         </div>
       </div>
     </div>
@@ -349,7 +359,7 @@
   <!-- <script src="../js/firebase/auth.js"></script> -->
   <!-- <script src="../js/firebase/fb-data.js"></script> -->
   <script src="../../js/users/MyAchievements.js"></script>
-  <script src="../../js/firebase/signout.js"></script>
+ 
 
 </body>
 
