added admin/user panel.

--- a/routes/AllMatches.html
+++ b/routes/AllMatches.html
@@ -61,17 +61,17 @@
 
 
       <!-- Nav Item - Pages Collapse Menu -->
-      <li class="nav-item active">
+      <li class="nav-item active admin">
         <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
           <i class="fas fa-fw fa-folder"></i>
-          <span>Pages</span>
+          <span>Admin Pages</span>
         </a>
         <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Admin Panel:</h6> 
             <a class="collapse-item" href="#">All Matches</a>
             <a class="collapse-item" href="./AllPlayers.html">All Players</a>
-            <a class="collapse-item admin" href="./AllPlayerCards.html">All Player Cards</a>
+            <a class="collapse-item admin" href="./admin/AllPlayerCards.html">All Player Cards</a>
           </div>
         </div>
       </li> 
@@ -84,7 +84,7 @@
 
 
 
-      <li class="nav-item active" >
+      <li class="nav-item active my-achievements-link" style="display: none;">
         <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseAchievements" aria-expanded="true" aria-controls="collapseAchievements">
           <i class="fas fa-fw fa-folder"></i>
           <span>My Achievements</span>
@@ -346,6 +346,8 @@
   <!-- <script src="../js/firebase/fb-data.js"></script> -->
   <script src="../js/admin/allMatches.js"></script>
   <script src="../js/firebase/signout.js"></script>
+
+  <script src="../js/listener.js"></script>
 
 </body>
 
