--- a/routes/admin/AllPlayerCards.html
+++ b/routes/admin/AllPlayerCards.html
@@ -64,7 +64,7 @@
       <li class="nav-item active">
         <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
           <i class="fas fa-fw fa-folder"></i>
-          <span>Pages</span>
+          <span>Admin Pages</span>
         </a>
         <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
@@ -84,7 +84,7 @@
 
 
 
-      <li class="nav-item active" >
+      <li class="nav-item active my-achievements-link" style="display: none;">
         <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseAchievements" aria-expanded="true" aria-controls="collapseAchievements">
           <i class="fas fa-fw fa-folder"></i>
           <span>My Achievements</span>
@@ -146,7 +146,7 @@
             <!-- Nav Item - User Information -->
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small img-profile-name">Byron Jay</span>
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small img-profile-name"></span>
                 <img class="img-profile rounded-circle" src="../../assets/img/user.svg">
               </a>
               <!-- Dropdown - User Information -->
@@ -346,6 +346,8 @@
   <!-- <script src="../js/firebase/fb-data.js"></script> -->
   <script src="../../js/admin/allPlayerCards.js"></script>
   <script src="../../js/firebase/signout.js"></script>
+
+  <script src="../../js/listener.js"></script>
 
 </body>
 
