--- a/routes/home.html
+++ b/routes/home.html
@@ -209,7 +209,7 @@
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">All Matches</div>
+                      <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Total Matches</div>
                       <div class="h5 mb-0 font-weight-bold text-gray-800">32</div>
                     </div>
                     <div class="col-auto">
@@ -226,7 +226,7 @@
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">All Players</div>
+                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Total Players</div>
                       <div class="h5 mb-0 font-weight-bold text-gray-800">3</div>
                     </div>
                     <div class="col-auto">
