--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <a class="small" href="forgot-password.html">Forgot Password?</a>
                   </div> -->
                   <div class="text-center">
-                    <a class="small" href="#" data-toggle="modal" data-target="#login-modal">Create an Account!</a>
+                    <a class="small" href="#" data-toggle="modal" data-target="#login-modal">SIGN-UP!</a>
                   </div>
                 </div>
               </div>
@@ -199,7 +199,9 @@
   <script src=" ./js/firebase/config.js"></script>
   
 
-  <script src="./js/firebase/login.js"></script>
+  <!-- <script src="./js/firebase/login.js"></script> -->
+  <script src="./js/firebase/auth/signin.js"></script>
+  <script src="./js/firebase/auth/signup.js"></script>
 
 </body>
 
