--- a/routes/admin/AllPlayerCards.html
+++ b/routes/admin/AllPlayerCards.html
@@ -69,8 +69,8 @@
         <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Admin Panel:</h6> 
-            <a class="collapse-item" href="../AllMatches.html">All Matches</a>
-            <a class="collapse-item" href="../AllPlayers.html">All Players</a>
+            <a class="collapse-item" href="./AllMatches.html">All Matches</a>
+            <a class="collapse-item" href="./AllPlayers.html">All Players</a>
             <a class="collapse-item admin" href="#">All Player Cards</a>
           </div>
         </div>
@@ -151,7 +151,7 @@
               </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="#">
+                <a class="dropdown-item" href="../users/MyProfile.html">
                   <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                   Profile
                 </a>
