updated player profile.

--- a/routes/users/MyProfile.html
+++ b/routes/users/MyProfile.html
@@ -242,6 +242,24 @@
                             </div>
                         </div>
                         <div class="form-group">
+                          <label class="col-lg-3 control-label">Total Games:</label>
+                          <div class="col-lg-4">
+                          <input class="form-control" type="text" id="my-total-games" value="" />
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-3 control-label">Total Wins:</label>
+                          <div class="col-lg-4">
+                          <input class="form-control" type="text" id="my-total-wins" value="" />
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-lg-3 control-label">Total Losses:</label>
+                          <div class="col-lg-4">
+                          <input class="form-control" type="text" id="my-total-losses" value="" />
+                          </div>
+                        </div>
+                        <div class="form-group">
                           <!-- <label class="col-lg-3 control-label">Avatar:</label> -->
                           
                           
