added user avatars.

--- a/routes/users/MyProfile.html
+++ b/routes/users/MyProfile.html
@@ -204,7 +204,9 @@
                 
                 <div class="col-md-3 mt-2 mb-4">
                     <div class="text-center">
-                      <img src="https://avatarfiles.alphacoders.com/129/129087.jpg" width="150px" height="150px" class="avatar img-circle" alt="avatar">
+                      <!-- <img src="https://avatarfiles.alphacoders.com/129/129087.jpg" width="150px" height="150px" class="avatar img-circle" alt="avatar"> -->
+                      <img src="" width="150px" height="150px" class="avatar img-circle" 
+                      id="my-img" alt="avatar">
                       <!-- <h6>Upload a different photo...</h6>
                       
                       <input type="file" class="form-control"> -->
@@ -551,6 +553,7 @@
   <script src="../../js/listener.js"></script>
   <script src="../../js/firebase/signout.js"></script>
 
+  <!-- <script src="../../js/script.js"></script> -->
 
 </body>
 
